--- a/src/index.less
+++ b/src/index.less
@@ -29,15 +29,15 @@
     填充颜色 
 */
 // 图标填充色
-@iconColor: #3a415c;
+@fullDarkColor: #3a415c;
 // 边框颜色
 @borderColor: #cfd3e3;
 // 分割线
 @dividerColor: #e9eaf2;
 // 图标填充色-白色
-@iconFullColor: #ffffff;
+@fullBrightColor: #ffffff;
 // 禁用填充色
-@iconDisableColor: #ededef;
+@fullDisableColor: #ededef;
 
 /*
     文字颜色 
