--- a/src/Button/index.less
+++ b/src/Button/index.less
@@ -2,26 +2,64 @@
 
 .@{prefix}-button {
   width: auto;
-  background: #807a7a;
   border-radius: 4px;
-  border: 1px solid #cfd3e3;
   padding: 6px 16px;
-  color: #fff;
   cursor: pointer;
   font-size: 14px;
+  border: 1px solid;
+  box-sizing: border-box;
+  transition: all 0.3s;
 
-  &.@{prefix}-button-default {
-    background: #807a7a;
-    border: 1px solid #cfd3e3;
+  &&-default {
+    background: #fff;
+    border-color: @borderColor;
+    color: @fullDarkColor;
+    &:hover {
+      border-color: #7692ff;
+      color: #7692ff;
+    }
   }
 
-  &.@{prefix}-button-primary {
+  &&-primary {
+    color: #fff;
     background: @primaryColor;
+    border-color: @primaryColor;
+    &:hover {
+      color: #fff;
+      background: #7692ff;
+    }
   }
 
-  &.@{prefix}-button-disabled {
-    background: @disableColor;
+  &&-dashed {
+    background: #fff;
+    border-style: dashed;
+    border-color: @borderColor;
+    &:hover {
+      border-color: #7692ff;
+      color: #7692ff;
+    }
   }
-  &.@{prefix}-button-inline {
+  &&-text {
+    background: none;
+    border: 0;
+    &:hover {
+      border-color: #7692ff;
+      color: #7692ff;
+    }
+  }
+
+  &&-disabled {
+    cursor: not-allowed;
+    background: @fullDisableColor;
+    color: #d0d1da;
+  }
+  &&-lg {
+    padding: 10px 16px;
+  }
+  &&-sm {
+    padding: 4px 16px;
+    font-size: 12px;
+  }
+  &&-inline {
   }
 }
