--- a/src/Grid/index.less
+++ b/src/Grid/index.less
@@ -46,552 +46,55 @@
   &:after {
     display: flex;
   }
+}
 
-  &-24 {
+.loop-grid-columns(@index, @class) when (@index > 0) {
+  .@{prefix}-col@{class}-@{index} {
     display: block;
-    flex: 0 0 100%;
-    max-width: 100%;
+    flex: 0 0 percentage((@index / @grid-columns));
+    max-width: percentage((@index / @grid-columns));
   }
-
-  &-push-24 {
-    left: 100%;
-  }
-
-  &-pull-24 {
-    right: 100%;
-  }
-
-  &-offset-24 {
-    margin-left: 100%;
-  }
-
-  &-order-24 {
-    order: 24;
-  }
-
-  &-23 {
-    display: block;
-    flex: 0 0 95.83333333%;
-    max-width: 95.83333333%;
-  }
-
-  &-push-23 {
-    left: 95.83333333%;
-  }
-
-  &-pull-23 {
-    right: 95.83333333%;
-  }
-
-  &-offset-23 {
-    margin-left: 95.83333333%;
-  }
-
-  &-order-23 {
-    order: 23;
-  }
-
-  &-22 {
-    display: block;
-    flex: 0 0 91.66666667%;
-    max-width: 91.66666667%;
-  }
-
-  &-push-22 {
-    left: 91.66666667%;
-  }
-
-  &-pull-22 {
-    right: 91.66666667%;
-  }
-
-  &-offset-22 {
-    margin-left: 91.66666667%;
-  }
-
-  &-order-22 {
-    order: 22;
-  }
-
-  &-21 {
-    display: block;
-    flex: 0 0 87.5%;
-    max-width: 87.5%;
-  }
-
-  &-push-21 {
-    left: 87.5%;
-  }
-
-  &-pull-21 {
-    right: 87.5%;
-  }
-
-  &-offset-21 {
-    margin-left: 87.5%;
-  }
-
-  &-order-21 {
-    order: 21;
-  }
-
-  &-20 {
-    display: block;
-    flex: 0 0 83.33333333%;
-    max-width: 83.33333333%;
-  }
-
-  &-push-20 {
-    left: 83.33333333%;
-  }
-
-  &-pull-20 {
-    right: 83.33333333%;
-  }
-
-  &-offset-20 {
-    margin-left: 83.33333333%;
-  }
-
-  &-order-20 {
-    order: 20;
-  }
-
-  &-19 {
-    display: block;
-    flex: 0 0 79.16666667%;
-    max-width: 79.16666667%;
-  }
-
-  &-push-19 {
-    left: 79.16666667%;
-  }
-
-  &-pull-19 {
-    right: 79.16666667%;
-  }
-
-  &-offset-19 {
-    margin-left: 79.16666667%;
-  }
-
-  &-order-19 {
-    order: 19;
-  }
-
-  &-18 {
-    display: block;
-    flex: 0 0 75%;
-    max-width: 75%;
-  }
-
-  &-push-18 {
-    left: 75%;
-  }
-
-  &-pull-18 {
-    right: 75%;
-  }
-
-  &-offset-18 {
-    margin-left: 75%;
-  }
-
-  &-order-18 {
-    order: 18;
-  }
-
-  &-17 {
-    display: block;
-    flex: 0 0 70.83333333%;
-    max-width: 70.83333333%;
-  }
-
-  &-push-17 {
-    left: 70.83333333%;
-  }
-
-  &-pull-17 {
-    right: 70.83333333%;
-  }
-
-  &-offset-17 {
-    margin-left: 70.83333333%;
-  }
-
-  &-order-17 {
-    order: 17;
-  }
-
-  &-16 {
-    display: block;
-    flex: 0 0 66.66666667%;
-    max-width: 66.66666667%;
-  }
-
-  &-push-16 {
-    left: 66.66666667%;
-  }
-
-  &-pull-16 {
-    right: 66.66666667%;
-  }
-
-  &-offset-16 {
-    margin-left: 66.66666667%;
-  }
-
-  &-order-16 {
-    order: 16;
-  }
-
-  &-15 {
-    display: block;
-    flex: 0 0 62.5%;
-    max-width: 62.5%;
-  }
-
-  &-push-15 {
-    left: 62.5%;
-  }
-
-  &-pull-15 {
-    right: 62.5%;
-  }
-
-  &-offset-15 {
-    margin-left: 62.5%;
-  }
-
-  &-order-15 {
-    order: 15;
-  }
-
-  &-14 {
-    display: block;
-    flex: 0 0 58.33333333%;
-    max-width: 58.33333333%;
-  }
-
-  &-push-14 {
-    left: 58.33333333%;
-  }
-
-  &-pull-14 {
-    right: 58.33333333%;
-  }
-
-  &-offset-14 {
-    margin-left: 58.33333333%;
-  }
-
-  &-order-14 {
-    order: 14;
-  }
-
-  &-13 {
-    display: block;
-    flex: 0 0 54.16666667%;
-    max-width: 54.16666667%;
-  }
-
-  &-push-13 {
-    left: 54.16666667%;
-  }
-
-  &-pull-13 {
-    right: 54.16666667%;
-  }
-
-  &-offset-13 {
-    margin-left: 54.16666667%;
-  }
-
-  &-order-13 {
-    order: 13;
+  .@{prefix}-col@{class}-push-@{index} {
+    left: percentage((@index / @grid-columns));
   }
-
-  &-12 {
-    display: block;
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-
-  &-push-12 {
-    left: 50%;
-  }
-
-  &-pull-12 {
-    right: 50%;
-  }
-
-  &-offset-12 {
-    margin-left: 50%;
-  }
-
-  &-order-12 {
-    order: 12;
-  }
-
-  &-11 {
-    display: block;
-    flex: 0 0 45.83333333%;
-    max-width: 45.83333333%;
-  }
-
-  &-push-11 {
-    left: 45.83333333%;
-  }
-
-  &-pull-11 {
-    right: 45.83333333%;
-  }
-
-  &-offset-11 {
-    margin-left: 45.83333333%;
-  }
-
-  &-order-11 {
-    order: 11;
-  }
-
-  &-10 {
-    display: block;
-    flex: 0 0 41.66666667%;
-    max-width: 41.66666667%;
-  }
-
-  &-push-10 {
-    left: 41.66666667%;
-  }
-
-  &-pull-10 {
-    right: 41.66666667%;
-  }
-
-  &-offset-10 {
-    margin-left: 41.66666667%;
-  }
-
-  &-order-10 {
-    order: 10;
-  }
-
-  &-9 {
-    display: block;
-    flex: 0 0 37.5%;
-    max-width: 37.5%;
-  }
-
-  &-push-9 {
-    left: 37.5%;
-  }
-
-  &-pull-9 {
-    right: 37.5%;
-  }
-
-  &-offset-9 {
-    margin-left: 37.5%;
-  }
-
-  &-order-9 {
-    order: 9;
-  }
-
-  &-8 {
-    display: block;
-    flex: 0 0 33.33333333%;
-    max-width: 33.33333333%;
-  }
-
-  &-push-8 {
-    left: 33.33333333%;
-  }
-
-  &-pull-8 {
-    right: 33.33333333%;
-  }
-
-  &-offset-8 {
-    margin-left: 33.33333333%;
-  }
-
-  &-order-8 {
-    order: 8;
-  }
-
-  &-7 {
-    display: block;
-    flex: 0 0 29.16666667%;
-    max-width: 29.16666667%;
-  }
-
-  &-push-7 {
-    left: 29.16666667%;
-  }
-
-  &-pull-7 {
-    right: 29.16666667%;
-  }
-
-  &-offset-7 {
-    margin-left: 29.16666667%;
-  }
-
-  &-order-7 {
-    order: 7;
-  }
-
-  &-6 {
-    display: block;
-    flex: 0 0 25%;
-    max-width: 25%;
-  }
-
-  &-push-6 {
-    left: 25%;
-  }
-
-  &-pull-6 {
-    right: 25%;
-  }
-
-  &-offset-6 {
-    margin-left: 25%;
-  }
-
-  &-order-6 {
-    order: 6;
-  }
-
-  &-5 {
-    display: block;
-    flex: 0 0 20.83333333%;
-    max-width: 20.83333333%;
-  }
-
-  &-push-5 {
-    left: 20.83333333%;
-  }
-
-  &-pull-5 {
-    right: 20.83333333%;
-  }
-
-  &-offset-5 {
-    margin-left: 20.83333333%;
-  }
-
-  &-order-5 {
-    order: 5;
-  }
-
-  &-4 {
-    display: block;
-    flex: 0 0 16.66666667%;
-    max-width: 16.66666667%;
-  }
-
-  &-push-4 {
-    left: 16.66666667%;
-  }
-
-  &-pull-4 {
-    right: 16.66666667%;
-  }
-
-  &-offset-4 {
-    margin-left: 16.66666667%;
+  .@{prefix}-col@{class}-pull-@{index} {
+    right: percentage((@index / @grid-columns));
   }
-
-  &-order-4 {
-    order: 4;
-  }
-
-  &-3 {
-    display: block;
-    flex: 0 0 12.5%;
-    max-width: 12.5%;
-  }
-
-  &-push-3 {
-    left: 12.5%;
-  }
-
-  &-pull-3 {
-    right: 12.5%;
-  }
-
-  &-offset-3 {
-    margin-left: 12.5%;
-  }
-
-  &-order-3 {
-    order: 3;
-  }
-
-  &-2 {
-    display: block;
-    flex: 0 0 8.33333333%;
-    max-width: 8.33333333%;
-  }
-
-  &-push-2 {
-    left: 8.33333333%;
+  .@{prefix}-col@{class}-offset-@{index} {
+    margin-left: percentage((@index / @grid-columns));
   }
-
-  &-pull-2 {
-    right: 8.33333333%;
-  }
-
-  &-offset-2 {
-    margin-left: 8.33333333%;
-  }
-
-  &-order-2 {
-    order: 2;
-  }
-
-  &-1 {
-    display: block;
-    flex: 0 0 4.16666667%;
-    max-width: 4.16666667%;
-  }
-
-  &-push-1 {
-    left: 4.16666667%;
-  }
-
-  &-pull-1 {
-    right: 4.16666667%;
-  }
-
-  &-offset-1 {
-    margin-left: 4.16666667%;
-  }
-
-  &-order-1 {
-    order: 1;
+  .@{prefix}-col@{class}-order-@{index} {
+    order: @index;
   }
+  .loop-grid-columns((@index - 1), @class);
+}
 
-  &-0 {
+.loop-grid-columns(@index, @class) when (@index = 0) {
+  .@{prefix}-col@{class}-@{index} {
     display: none;
   }
-
-  &-push-0 {
+  .@{prefix}-col-push-@{index} {
     left: auto;
   }
-
-  &-pull-0 {
+  .@{prefix}-col-pull-@{index} {
     right: auto;
   }
-
-  &-offset-0 {
+  .@{prefix}-col@{class}-push-@{index} {
+    left: auto;
+  }
+  .@{prefix}-col@{class}-pull-@{index} {
+    right: auto;
+  }
+  .@{prefix}-col@{class}-offset-@{index} {
     margin-left: 0;
   }
-
-  &-order-0 {
+  .@{prefix}-col@{class}-order-@{index} {
     order: 0;
   }
 }
+
+.make-grid(@class: ~'') {
+  .loop-grid-columns(@grid-columns, @class);
+}
+
+.make-grid();
