--- a/src/Button/index.less
+++ b/src/Button/index.less
@@ -11,6 +11,10 @@
   transition: all 0.3s;
   white-space: nowrap;
 
+  span {
+    vertical-align: middle;
+  }
+
   &&-default {
     background: #fff;
     border-color: @borderColor;
