--- a/src/Button/index.less
+++ b/src/Button/index.less
@@ -11,6 +11,12 @@
   transition: all 0.3s;
   white-space: nowrap;
 
+  .@{prefix}-iconfont {
+    vertical-align: middle;
+    margin-right: 5px;
+    margin-left: -3px;
+    color: inherit;
+  }
   span {
     vertical-align: middle;
   }
