增加新的组件

--- a/src/Card/index.less
+++ b/src/Card/index.less
@@ -49,6 +49,10 @@
       font-size: 14px;
       color: #15171f;
       line-height: 40px;
+      &-disabled {
+        cursor: not-allowed;
+        color: #d0d1d9;
+      }
       &&-active {
         position: relative;
         &:after {
