--- a/src/Popconfirm/index.less
+++ b/src/Popconfirm/index.less
@@ -1,4 +1,46 @@
 @import '../index.less';
 
-.@{prefix}-t {
+.@{prefix}-popconfirm-warp {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+}
+
+.@{prefix}-popconfirm-target {
+  cursor: pointer;
+}
+
+.@{prefix}-popconfirm {
+  position: absolute;
+  z-index: 10;
+  width: 172px;
+  background: #ffffff;
+  box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
+  border-radius: 2px;
+  transform: translate(-50%, -100%);
+  &-mask {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+  }
+
+  &-body {
+    padding: 16px;
+  }
+  &-footer {
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 16px;
+    & > * {
+      margin-left: 16px;
+    }
+  }
 }
