修改组件结构

--- a/src/Button/index.less
+++ b/src/Button/index.less
@@ -10,15 +10,17 @@
   box-sizing: border-box;
   transition: all 0.3s;
   white-space: nowrap;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
 
   .@{prefix}-iconfont {
-    vertical-align: middle;
     margin-right: 5px;
     margin-left: -3px;
     color: inherit;
   }
   span {
-    vertical-align: middle;
+    line-height: 16px;
   }
 
   &&-default {
