--- a/src/Descriptions/index.less
+++ b/src/Descriptions/index.less
@@ -1,4 +1,60 @@
 @import '../index.less';
 
-.@{prefix}-t {
+.@{prefix}-descriptions {
+  &-border {
+    .@{prefix}-descriptions-content {
+      border-top: 1px solid #f0f2f5;
+      border-right: 1px solid #f0f2f5;
+    }
+    .@{prefix}-descriptions-item-label {
+      flex: 0 0 120px;
+      padding: 15px 12px;
+      width: 120px;
+      background: #f0f2f5;
+      border-bottom: 1px solid #e9eaf2;
+      color: #15171f;
+      &:after {
+        content: '：';
+      }
+    }
+
+    .@{prefix}-descriptions-item-content {
+      padding: 15px 12px;
+      font-size: 12px;
+      color: #3e4046;
+      line-height: 17px;
+      background: #fff;
+      border-bottom: 1px solid #f0f2f5;
+      color: #15171f;
+    }
+  }
+  &-title {
+    font-size: 14px;
+    color: #7a8199;
+    line-height: 20px;
+    margin-bottom: 16px;
+  }
+  &-item {
+    height: 100%;
+    display: flex;
+    // margin-bottom: 16px;
+    &-label {
+      font-size: 12px;
+      color: #7a8199;
+      line-height: 17px;
+      height: 100%;
+      &:after {
+        content: '：';
+      }
+    }
+
+    &-content {
+      height: 100%;
+      flex: 1;
+      padding-left: 2px;
+      font-size: 12px;
+      color: #3e4046;
+      line-height: 17px;
+    }
+  }
 }
