--- a/src/Input/index.less
+++ b/src/Input/index.less
@@ -1,4 +1,37 @@
 @import '../index.less';
 
-.@{prefix}-t {
+.@{prefix}-input {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 5px;
+
+  &.horizontal {
+    flex-direction: row;
+  }
+
+  div.label {
+    font-size: 12px;
+    line-height: 30px;
+    color: #7a8199;
+
+    .label-required {
+      font-size: 12px;
+      color: #f5221b;
+      line-height: 30px;
+      margin-right: 4px;
+    }
+  }
+
+  div.content {
+    line-height: 20px;
+    border: 1px solid #cfd3e3;
+    border-radius: 4px;
+    input {
+      outline: 0;
+      padding: 5px;
+      width: 100%;
+      border: none;
+      font-size: 12px;
+    }
+  }
 }
