--- a/src/Radio/index.less
+++ b/src/Radio/index.less
@@ -4,6 +4,15 @@
   cursor: pointer;
   display: flex;
   align-items: center;
+  height: 32px;
+
+  &-group {
+    display: flex;
+
+    .@{prefix}-radio {
+      margin-right: 16px;
+    }
+  }
 
   & > input {
     display: none;
