修改打包错误的问题

--- a/src/Descriptions/index.less
+++ b/src/Descriptions/index.less
@@ -26,6 +26,8 @@
       background: #fff;
       border-bottom: 1px solid #f0f2f5;
       color: #15171f;
+      word-break: break-all;
+      overflow: hidden;
     }
   }
   &-title {
