--- a/src/Descriptions/index.less
+++ b/src/Descriptions/index.less
@@ -3,22 +3,30 @@
 .@{prefix}-descriptions {
   &-border {
     .@{prefix}-descriptions-content {
-      border-top: 1px solid #f0f2f5;
-      border-right: 1px solid #f0f2f5;
     }
-    .@{prefix}-descriptions-item-label {
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      table-layout: auto;
+      border: 1px solid #e9eaf2;
+    }
+    th {
       flex: 0 0 120px;
       padding: 15px 12px;
       width: 120px;
+      font-size: 12px;
+      color: #7a8199;
+      line-height: 17px;
       background: #f0f2f5;
       border-bottom: 1px solid #e9eaf2;
+      border-right: 1px solid #e9eaf2;
       color: #15171f;
       &:after {
         content: '：';
       }
     }
 
-    .@{prefix}-descriptions-item-content {
+    td {
       padding: 15px 12px;
       font-size: 12px;
       color: #3e4046;
