--- a/src/Modal/index.less
+++ b/src/Modal/index.less
@@ -21,9 +21,27 @@
   box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
   border-radius: 2px;
 
+  &-confirm {
+    width: 384px;
+
+    .@{prefix}-modal-head {
+      border: 0;
+    }
+
+    .@{prefix}-modal-body {
+      padding: 0 16px;
+      font-size: 14px;
+    }
+
+    .@{prefix}-modal-footer {
+      border: 0;
+    }
+  }
+
   &-visible {
     display: flex;
   }
+
   &-mask {
     position: absolute;
     z-index: 1;
@@ -33,6 +51,7 @@
     bottom: 0;
     background: rgba(0, 0, 0, 0.6);
   }
+
   &-head {
     height: 48px;
     display: flex;
@@ -40,12 +59,14 @@
     justify-content: space-between;
     padding: 0 16px;
     border-bottom: 1px solid #e9eaf2;
+
     &-title {
       font-size: 16px;
       font-weight: 500;
       color: #15171f;
       line-height: 24px;
     }
+
     &-close {
       cursor: pointer;
       position: absolute;
@@ -54,9 +75,11 @@
       color: #3a415c;
     }
   }
+
   &-body {
     padding: 16px;
   }
+
   &-footer {
     height: 48px;
     display: flex;
@@ -64,6 +87,7 @@
     justify-content: flex-end;
     padding: 0 16px;
     border-top: 1px solid #e9eaf2;
+
     & > * {
       margin-left: 16px;
     }
