--- a/src/Popconfirm/index.less
+++ b/src/Popconfirm/index.less
@@ -1,12 +1,6 @@
 @import '../index.less';
 
 .@{prefix}-popconfirm-warp {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 9999;
 }
 
 .@{prefix}-popconfirm-target {
@@ -21,13 +15,24 @@
   box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
   border-radius: 2px;
   transform: translate(-50%, -100%);
+  &:after {
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    margin-left: -5px;
+    content: '';
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #fff;
+    filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
+  }
   &-mask {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+    // position: fixed;
+    // z-index: 1;
+    // left: 0;
+    // right: 0;
+    // top: 0;
+    // bottom: 0;
   }
 
   &-body {
