--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -1,12 +1,6 @@
 @import '../index.less';
 
 .@{prefix}-select-warp {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 9999;
 }
 
 .@{prefix}-select-target {
@@ -16,7 +10,6 @@
   border-radius: 4px;
   border: 1px solid #cfd3e3;
   line-height: 30px;
-  padding: 0 8px;
   font-size: 14px;
   color: @textColor;
   overflow: hidden;
@@ -24,6 +17,7 @@
   display: flex;
   align-items: center;
   &-content {
+    padding: 0 8px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -75,12 +69,12 @@
   }
 
   &-mask {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+    // position: fixed;
+    // z-index: 1;
+    // left: 0;
+    // right: 0;
+    // top: 0;
+    // bottom: 0;
   }
 
   &-body {
