--- a/src/Collapse/index.less
+++ b/src/Collapse/index.less
@@ -1,4 +1,36 @@
 @import '../index.less';
 
-.@{prefix}-t {
+.@{prefix}-collapse {
+  width: 100%;
+  border-top: 1px solid #e9eaf2;
+  border-left: 1px solid #e9eaf2;
+  border-right: 1px solid #e9eaf2;
+
+  &-item {
+    &&-open {
+      .@{prefix}-collapse-item-body {
+        display: block;
+      }
+    }
+
+    &-head {
+      height: 40px;
+      background: #f0f2f5;
+      border-bottom: 1px solid #e9eaf2;
+      display: flex;
+      align-items: center;
+      padding: 0 12px;
+      cursor: pointer;
+      font-size: 12px;
+      color: #15171f;
+      line-height: 18px;
+    }
+
+    &-body {
+      background: #fff;
+      padding: 12px;
+      display: none;
+      border-bottom: 1px solid #e9eaf2;
+    }
+  }
 }
