--- a/src/Tooltip/index.less
+++ b/src/Tooltip/index.less
@@ -1,4 +1,96 @@
 @import '../index.less';
 
-.@{prefix}-t {
+.@{prefix}-tooltip-warp {
+}
+
+.@{prefix}-tooltip-target {
+  cursor: pointer;
+}
+
+.@{prefix}-tooltip {
+  position: absolute;
+  z-index: 10;
+  border-radius: 4px;
+  background: rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 10px 0px rgba(117, 125, 150, 0.2);
+  display: none;
+
+  &-visible {
+    display: block;
+  }
+
+  &-top {
+    transform: translate(-50%, -100%);
+  }
+
+  &-left {
+    transform: translate(-100%, -50%);
+
+    &.@{prefix}-tooltip {
+      &:after {
+        left: auto;
+        top: 50%;
+        margin-top: -5px;
+        right: -10px;
+        border-right: 5px solid transparent;
+        border-left: 5px solid rgba(0, 0, 0, 0.75);
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+      }
+    }
+  }
+
+  &-right {
+    transform: translate(0, -50%);
+
+    &.@{prefix}-tooltip {
+      &:after {
+        right: auto;
+        top: 50%;
+        margin-top: -5px;
+        left: -5px;
+        border-left: 5px solid transparent;
+        border-right: 5px solid rgba(0, 0, 0, 0.75);
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+      }
+    }
+  }
+
+  &-bottom {
+    transform: translate(-50%, 100%);
+
+    &.@{prefix}-tooltip {
+      &:after {
+        top: -5px;
+        margin-top: -5px;
+        border-right: 5px solid transparent;
+        border-bottom: 5px solid rgba(0, 0, 0, 0.75);
+        border-left: 5px solid transparent;
+        border-top: 5px solid transparent;
+      }
+    }
+  }
+
+  &:after {
+    width: 0;
+    height: 0;
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    margin-left: -5px;
+    content: '';
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid rgba(0, 0, 0, 0.75);
+    filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
+  }
+
+  &-body {
+    padding: 8px;
+    color: #fff;
+    font-size: 14px;
+    color: #ffffff;
+    line-height: 1em;
+  }
 }
