--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -23,6 +23,12 @@
     text-overflow: ellipsis;
     flex: 1;
   }
+  &-arrow {
+    margin-right: 9px;
+  }
+  &-close {
+    margin-right: 9px;
+  }
   .iconfont {
     line-height: 1em;
   }
