--- a/src/Icon/index.less
+++ b/src/Icon/index.less
@@ -1,5 +1,10 @@
-@import url('//at.alicdn.com/t/font_1190078_n4231nhegi.css');
+// @import url('./resources/iconfont.css');
 
-.iconfont {
+.icon {
   // color: #000;
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
 }
