--- a/src/Input/index.less
+++ b/src/Input/index.less
@@ -5,6 +5,11 @@
   border: 1px solid #cfd3e3;
   border-radius: 4px;
   transition: border 0.3s;
+
+  &:hover {
+    border-color: @primaryColorHover;
+  }
+
   &.horizontal {
     flex-direction: row;
   }
@@ -22,7 +27,7 @@
     }
   }
   &-focus {
-    border-color: @primaryColor;
+    border-color: @primaryColorActive;
   }
   &-icon {
     line-height: 32px;
