--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -13,21 +13,48 @@
   font-size: 14px;
   color: @textColor;
   overflow: hidden;
-
   display: flex;
   align-items: center;
+  transition: border 0.3s;
+  position: relative;
+  &:hover:not(.@{prefix}-select-target-disabled) {
+    border-color: @primaryColorHover;
+    .@{prefix}-select-target-arrow {
+    }
+  }
   &-content {
     padding: 0 8px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     flex: 1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
   }
   &-arrow {
-    margin-right: 9px;
+    position: absolute;
+    z-index: 0;
+    right: 9px;
+    top: 0px;
+    transition: all 0.3s;
   }
   &-close {
-    margin-right: 9px;
+    position: absolute;
+    z-index: 0;
+    right: 9px;
+    top: 0px;
+    z-index: 11;
+  }
+  &-open {
+    border-color: @primaryColorActive;
+
+    .@{prefix}-select-target-arrow {
+      transform: rotate(-180deg);
+    }
   }
   .iconfont {
     line-height: 1em;
