--- a/src/Tree/index.less
+++ b/src/Tree/index.less
@@ -1,4 +1,30 @@
-@import '../index.less';
+@import url('../index.less');
 
-.@{prefix}-t {
+.@{prefix}-trees {
+  display: inline-block;
+
+  .@{prefix}-tree-row {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    line-height: 1em;
+    overflow-wrap: break-word;
+    font-size: 12px;
+    color: #13151a;
+    box-sizing: border-box;
+
+    .@{prefix}-tree-collapsed {
+      cursor: pointer;
+      margin-right: 8px;
+      text-align: center;
+      .@{prefix}-tree-collapsed-icon {
+        transition: all 0.3s;
+      }
+    }
+    p {
+      font-size: 12px;
+      color: #13151a;
+      margin: 0;
+    }
+  }
 }
