--- a/src/Alert/index.less
+++ b/src/Alert/index.less
@@ -61,7 +61,8 @@
         display: block;
       }
     }
-
+    line-height: 1em;
+    display: block;
     margin-right: 8px;
   }
 
@@ -100,7 +101,7 @@
     right: 16px;
     top: 13px;
     cursor: pointer;
-
+    line-height: 1em;
     .iconfont {
       display: block;
     }
