--- a/src/Empty/index.less
+++ b/src/Empty/index.less
@@ -1,4 +1,24 @@
 @import '../index.less';
 
-.@{prefix}-t {
+.@{prefix}-empty {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  img {
+    width: 180px;
+    height: 180px;
+    display: block;
+  }
+  p {
+    height: 2em;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    color: #d0d1d9;
+    line-height: 22px;
+  }
 }
