--- a/src/Tree/index.less
+++ b/src/Tree/index.less
@@ -12,6 +12,7 @@
     font-size: 12px;
     color: #13151a;
     box-sizing: border-box;
+    line-height: 32px;
 
     .@{prefix}-tree-collapsed {
       cursor: pointer;
