--- a/src/Icon/resources/iconfont.css
+++ b/src/Icon/resources/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
-  font-family: "iconfont"; /* Project id 2635145 */
-  src: url('iconfont.woff2?t=1624696165772') format('woff2'),
-       url('iconfont.woff?t=1624696165772') format('woff'),
-       url('iconfont.ttf?t=1624696165772') format('truetype');
+  font-family: "iconfont"; /* Project id 2604718 */
+  src: url('iconfont.woff2?t=1624957168028') format('woff2'),
+       url('iconfont.woff?t=1624957168028') format('woff'),
+       url('iconfont.ttf?t=1624957168028') format('truetype');
 }
 
 .iconfont {
@@ -13,40 +13,220 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-shanchu:before {
-  content: "\e638";
+.icon-jiangxu:before {
+  content: "\e669";
 }
 
-.icon-shaixuan:before {
-  content: "\e714";
-}
-
-.icon-suoxiao:before {
-  content: "\e762";
-}
-
-.icon-fangda:before {
-  content: "\e763";
-}
-
-.icon-xuanzexiala:before {
-  content: "\e628";
+.icon-shengxu:before {
+  content: "\e66a";
 }
 
 .icon-paixu:before {
-  content: "\e629";
+  content: "\e66b";
 }
 
-.icon-cuowu:before {
-  content: "\e631";
+.icon-xuanzeyou:before {
+  content: "\e667";
+}
+
+.icon-xuanzezuo:before {
+  content: "\e668";
+}
+
+.icon-xuanzeshouqi:before {
+  content: "\e665";
+}
+
+.icon-xuanzexiala:before {
+  content: "\e666";
+}
+
+.icon-xunwen1:before {
+  content: "\e660";
+}
+
+.icon-jinggao:before {
+  content: "\e661";
+}
+
+.icon-tixing:before {
+  content: "\e662";
+}
+
+.icon-chenggong:before {
+  content: "\e663";
+}
+
+.icon-shibai:before {
+  content: "\e664";
 }
 
 .icon-zhengque:before {
+  content: "\e65e";
+}
+
+.icon-cuowu:before {
+  content: "\e65f";
+}
+
+.icon-wenhao:before {
+  content: "\e645";
+}
+
+.icon-tanhao:before {
+  content: "\e646";
+}
+
+.icon-jianhao:before {
+  content: "\e635";
+}
+
+.icon-jiahao:before {
+  content: "\e63c";
+}
+
+.icon-tianjia:before {
   content: "\e633";
 }
 
-.icon-tianjia1:before {
-  content: "\e63c";
+.icon-jianqu:before {
+  content: "\e634";
+}
+
+.icon-biaogeshouqi:before {
+  content: "\e631";
+}
+
+.icon-biaogezhankai:before {
+  content: "\e632";
+}
+
+.icon-xunwen:before {
+  content: "\e63d";
+}
+
+.icon-chuansuokuang-xiangyoubukeyong:before {
+  content: "\e65a";
+}
+
+.icon-chuansuokuang-xiangzuobukeyong:before {
+  content: "\e65b";
+}
+
+.icon-chuansuokuang-xiangyou:before {
+  content: "\e65c";
+}
+
+.icon-chuansuokuang-xiangzuo:before {
+  content: "\e65d";
+}
+
+.icon-jiaohuan:before {
+  content: "\e656";
+}
+
+.icon-heyue:before {
+  content: "\e657";
+}
+
+.icon-bianji1:before {
+  content: "\e658";
+}
+
+.icon-xinjianwenjian:before {
+  content: "\e659";
+}
+
+.icon-Rootnet:before {
+  content: "\e655";
+}
+
+.icon-fangda:before {
+  content: "\e653";
+}
+
+.icon-suoxiao:before {
+  content: "\e654";
+}
+
+.icon-shanchu:before {
+  content: "\e63e";
+}
+
+.icon-shaixuan:before {
+  content: "\e649";
+}
+
+.icon-qiehuanbiaoge:before {
+  content: "\e638";
+}
+
+.icon-pingxing:before {
+  content: "\e64f";
+}
+
+.icon-shiyongzhe:before {
+  content: "\e650";
+}
+
+.icon-shijian:before {
+  content: "\e651";
+}
+
+.icon-banxing:before {
+  content: "\e652";
+}
+
+.icon-zhongxinjiazai:before {
+  content: "\e648";
+}
+
+.icon-shezhi:before {
+  content: "\e64a";
+}
+
+.icon-baocun:before {
+  content: "\e64b";
+}
+
+.icon-guanbishengyin:before {
+  content: "\e64c";
+}
+
+.icon-dakaishengyin:before {
+  content: "\e64d";
+}
+
+.icon-sousuo:before {
+  content: "\e64e";
+}
+
+.icon-lianjie:before {
+  content: "\e63f";
+}
+
+.icon-qiehuantubiao:before {
+  content: "\e640";
+}
+
+.icon-rili:before {
+  content: "\e641";
+}
+
+.icon-bukejian:before {
+  content: "\e642";
+}
+
+.icon-bianji:before {
+  content: "\e643";
+}
+
+.icon-xianshi:before {
+  content: "\e644";
+}
+
+.icon-heji:before {
+  content: "\e647";
 }
 
 .icon-chenggong1:before {
@@ -65,11 +245,175 @@
   content: "\e63b";
 }
 
-.icon-xunwen2:before {
-  content: "\e63d";
+.icon-fanhui:before {
+  content: "\e627";
 }
 
-.icon-Rootnet:before {
-  content: "\e649";
+.icon-weixincaidan:before {
+  content: "\e622";
+}
+
+.icon-weixinguanwangpeizhi:before {
+  content: "\e623";
+}
+
+.icon-zhuijia:before {
+  content: "\e624";
+}
+
+.icon-shangchuan:before {
+  content: "\e625";
+}
+
+.icon-chexiaofabu:before {
+  content: "\e626";
+}
+
+.icon-GIF:before {
+  content: "\e61a";
+}
+
+.icon-PDF:before {
+  content: "\e61b";
+}
+
+.icon-JPEG:before {
+  content: "\e61c";
+}
+
+.icon-PNG:before {
+  content: "\e61d";
+}
+
+.icon-seban:before {
+  content: "\e618";
+}
+
+.icon-wenbenye:before {
+  content: "\e619";
+}
+
+.icon-shouji:before {
+  content: "\e616";
+}
+
+.icon-diannao:before {
+  content: "\e617";
+}
+
+.icon-duoshaixuanshouqi:before {
+  content: "\e614";
+}
+
+.icon-duoshaixuanzhankai:before {
+  content: "\e615";
+}
+
+.icon-daochuliebiao:before {
+  content: "\e639";
+}
+
+.icon-tiaoqushaixuanmoban-copy:before {
+  content: "\e7a8";
+}
+
+.icon-shuaxin1:before {
+  content: "\e676";
+}
+
+.icon-tiaojianzhankai:before {
+  content: "\e612";
+}
+
+.icon-tiaojianshouqi:before {
+  content: "\e613";
+}
+
+.icon-arrow_drop_down:before {
+  content: "\e6f8";
+}
+
+.icon-arrow_drop_up:before {
+  content: "\e6f9";
+}
+
+.icon-gengduo2:before {
+  content: "\e6a2";
+}
+
+.icon-daochu:before {
+  content: "\e636";
+}
+
+.icon-daoru:before {
+  content: "\e637";
+}
+
+.icon-fuzhi:before {
+  content: "\e74e";
+}
+
+.icon-xitongguanli:before {
+  content: "\e611";
+}
+
+.icon-chanpinguanli:before {
+  content: "\e609";
+}
+
+.icon-menhujianshe:before {
+  content: "\e60a";
+}
+
+.icon-gongzuotai:before {
+  content: "\e60b";
+}
+
+.icon-kehuguanli:before {
+  content: "\e60c";
+}
+
+.icon-haihexinqianyuepingtai:before {
+  content: "\e60d";
+}
+
+.icon-xinxipilou:before {
+  content: "\e60e";
+}
+
+.icon-shidangxingguanli:before {
+  content: "\e60f";
+}
+
+.icon-xiaoshouguanli:before {
+  content: "\e610";
+}
+
+.icon-icon-pc:before {
+  content: "\e6d1";
+}
+
+.icon-icon-pad:before {
+  content: "\e6d2";
+}
+
+.icon-icon-mobile:before {
+  content: "\e6d4";
+}
+
+.icon-icon-forward:before {
+  content: "\e6d5";
+}
+
+.icon-icon-return:before {
+  content: "\e6d6";
+}
+
+.icon-icon-narrow:before {
+  content: "\e6db";
+}
+
+.icon-icon-enlarge:before {
+  content: "\e6dc";
 }
 
