--- a/src/Icon/resources/iconfont.css
+++ b/src/Icon/resources/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2604718 */
-  src: url('iconfont.woff2?t=1624957168028') format('woff2'),
-       url('iconfont.woff?t=1624957168028') format('woff'),
-       url('iconfont.ttf?t=1624957168028') format('truetype');
+  src: url('iconfont.woff2?t=1624965900501') format('woff2'),
+       url('iconfont.woff?t=1624965900501') format('woff'),
+       url('iconfont.ttf?t=1624965900501') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-fabu:before {
+  content: "\e66e";
+}
+
+.icon-chexiaofabu:before {
+  content: "\e66d";
+}
+
+.icon-zhuijia1:before {
+  content: "\e66c";
 }
 
 .icon-jiangxu:before {
@@ -257,16 +269,8 @@
   content: "\e623";
 }
 
-.icon-zhuijia:before {
-  content: "\e624";
-}
-
 .icon-shangchuan:before {
   content: "\e625";
-}
-
-.icon-chexiaofabu:before {
-  content: "\e626";
 }
 
 .icon-GIF:before {
@@ -313,7 +317,7 @@
   content: "\e639";
 }
 
-.icon-tiaoqushaixuanmoban-copy:before {
+.icon-tiaoqushaixuanmoban:before {
   content: "\e7a8";
 }
 
@@ -327,14 +331,6 @@
 
 .icon-tiaojianshouqi:before {
   content: "\e613";
-}
-
-.icon-arrow_drop_down:before {
-  content: "\e6f8";
-}
-
-.icon-arrow_drop_up:before {
-  content: "\e6f9";
 }
 
 .icon-gengduo2:before {
@@ -389,31 +385,31 @@
   content: "\e610";
 }
 
-.icon-icon-pc:before {
+.icon-pc:before {
   content: "\e6d1";
 }
 
-.icon-icon-pad:before {
+.icon-pad:before {
   content: "\e6d2";
 }
 
-.icon-icon-mobile:before {
+.icon-mobile:before {
   content: "\e6d4";
 }
 
-.icon-icon-forward:before {
+.icon-forward:before {
   content: "\e6d5";
 }
 
-.icon-icon-return:before {
+.icon-return:before {
   content: "\e6d6";
 }
 
-.icon-icon-narrow:before {
+.icon-narrow:before {
   content: "\e6db";
 }
 
-.icon-icon-enlarge:before {
+.icon-enlarge:before {
   content: "\e6dc";
 }
 
