--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -50,7 +50,7 @@
     top: 0px;
     z-index: 11;
   }
-  &-open {
+  &-visible {
     border-color: @primaryColorActive;
 
     .@{prefix}-select-target-arrow {
