优化组件细节

--- a/src/Collapse/index.less
+++ b/src/Collapse/index.less
@@ -24,6 +24,9 @@
       font-size: 12px;
       color: #15171f;
       line-height: 18px;
+      & > .iconfont {
+        margin-right: 5px;
+      }
     }
 
     &-body {
