增加穿梭框

--- a/src/Checkbox/index.less
+++ b/src/Checkbox/index.less
@@ -43,6 +43,7 @@
 
   // }
   &&-disabled {
+    cursor: not-allowed;
     .@{prefix}-checkbox-icon {
       border-color: @borderColor;
       background: @fullDisableColor;
