--- a/src/Input/index.less
+++ b/src/Input/index.less
@@ -59,6 +59,10 @@
     text-align: center;
     line-height: 30px;
     color: #7a8199;
+    svg {
+      display: inline-block;
+      vertical-align: middle;
+    }
   }
   &-after {
     font-size: 14px;
