--- a/src/Tree/index.less
+++ b/src/Tree/index.less
@@ -18,6 +18,8 @@
       cursor: pointer;
       margin-right: 8px;
       text-align: center;
+      display: flex;
+      align-items: center;
       .@{prefix}-tree-collapsed-icon {
         transition: all 0.3s;
       }
