--- a/src/Transfer/index.less
+++ b/src/Transfer/index.less
@@ -2,7 +2,7 @@
 
 .@{prefix}-transfer {
   display: flex;
-
+  height: 332px;
   &-title {
     font-size: 14px;
     color: #15171f;
@@ -27,9 +27,14 @@
     background: #ffffff;
     border-radius: 4px;
     border: 1px solid #cfd3e3;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
   }
 
   &-checkbox {
+    flex: 1;
+    overflow: auto;
     .@{prefix}-trees {
       margin: 0 8px;
     }
@@ -55,6 +60,26 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    &-item {
+      cursor: pointer;
+      margin: 8px 0;
+      width: 24px;
+      height: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 2px;
+
+      background: #5477ff;
+      color: #fff;
+
+      &-disabled {
+        cursor: not-allowed;
+        background: #ffffff;
+        border-radius: 2px;
+        border: 1px solid #cfd3e3;
+      }
+    }
   }
 
   &-right {
@@ -71,7 +96,9 @@
   &-allCheckbox-cotnent {
     display: flex;
     align-items: center;
+    white-space: nowrap;
     .num {
+      white-space: nowrap;
       font-size: 14px;
       color: #7a8199;
       margin-left: 6px;
