--- a/src/Icon/index.less
+++ b/src/Icon/index.less
@@ -1,5 +1,6 @@
-.icon {
-  // color: #000;
+@import '../index.less';
+
+.@{prefix}-icon {
   width: 1em;
   height: 1em;
   vertical-align: -0.15em;
