--- a/src/Table/index.less
+++ b/src/Table/index.less
@@ -26,6 +26,7 @@
         border-bottom: 1px solid #e9eaf2;
       }
     }
+
     .@{prefix}-table-index {
       text-align: center;
     }
@@ -44,9 +45,11 @@
         font-size: 12px;
         color: #13151a;
         box-sizing: border-box;
+
         &.@{prefix}-table-collapsed {
           cursor: pointer;
           text-align: center;
+
           .@{prefix}-table-collapsed-icon {
             transition: all 0.3s;
           }
@@ -67,18 +70,29 @@
     .@{prefix}-table-row {
       transition: background 0.3s;
       cursor: pointer;
+
       &:hover {
         background: #d3dbe9;
       }
 
       .@{prefix}-table-td {
         &.@{prefix}-table-collapsed {
-          cursor: pointer;
-          text-align: center;
+          & > span {
+            display: flex;
+            align-items: center;
+          }
+
           .@{prefix}-table-collapsed-icon {
             transition: all 0.3s;
+            display: inline-block;
+            vertical-align: middle;
+            margin-right: 5px;
+
+            & + * {
+            }
           }
         }
+
         display: table-cell;
         padding: 11px 12px;
         line-height: 1em;
