--- a/src/Drawer/index.less
+++ b/src/Drawer/index.less
@@ -2,6 +2,7 @@
 
 .@{prefix}-drawer-warp {
   display: none;
+  transition: all 0.3s;
 }
 
 .@{prefix}-drawer {
@@ -11,9 +12,14 @@
   background: #ffffff;
   box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
   border-radius: 2px;
+  transition: all 0.3s;
 
   &-visible {
     display: block;
+
+    .@{prefix}-drawer {
+      transform: translate(0%, 0%);
+    }
   }
 
   &-left {
@@ -24,6 +30,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    transform: translate(-100%, 0);
 
     .@{prefix}-drawer-body {
       flex: 1;
@@ -45,6 +52,7 @@
       overflow: auto;
     }
   }
+
   &-top {
     position: fixed;
     top: 0;
@@ -54,11 +62,13 @@
     flex-direction: column;
     overflow: hidden;
     width: 100%;
+
     .@{prefix}-drawer-body {
       flex: 1;
       overflow: auto;
     }
   }
+
   &-bottom {
     position: fixed;
     right: 0;
@@ -68,6 +78,7 @@
     flex-direction: column;
     overflow: hidden;
     width: 100%;
+
     .@{prefix}-drawer-body {
       flex: 1;
       overflow: auto;
@@ -124,4 +135,22 @@
       margin-left: 16px;
     }
   }
+}
+
+.example-enter {
+  opacity: 0.01;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.example-leave {
+  opacity: 1;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
 }
