优化细节样式

--- a/src/Table/index.less
+++ b/src/Table/index.less
@@ -24,6 +24,9 @@
       td {
         border-left: 1px solid #e9eaf2;
         border-bottom: 1px solid #e9eaf2;
+        & > span {
+          display: inline-block;
+        }
       }
     }
 
