--- a/src/Popconfirm/index.less
+++ b/src/Popconfirm/index.less
@@ -8,7 +8,7 @@
 }
 
 .@{prefix}-popconfirm {
-  // position: relative;
+  position: relative;
   z-index: 10;
   width: 172px;
   background: #ffffff;
