--- a/src/Tabs/index.less
+++ b/src/Tabs/index.less
@@ -4,6 +4,47 @@
   border-radius: 6px;
   display: flex;
   flex-direction: column;
+  &-horizontal {
+    flex-direction: row;
+    .@{prefix}-tabs-head {
+      flex: 0 0 114px;
+      min-width: 114px;
+      height: auto;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      border: 0;
+      border-right: 1px solid @dividerColor;
+      &-content {
+        width: 100%;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+      }
+    }
+
+    .@{prefix}-tabs-nav {
+      width: 100%;
+      align-items: flex-end;
+      flex-direction: column;
+      &-item {
+        width: 100%;
+        margin: 0;
+        &-active {
+          &::after {
+            bottom: 0;
+            left: auto;
+            top: 0;
+            right: 0;
+            height: 40px;
+            background: #5477ff;
+            border-radius: 2px;
+            width: 2px;
+          }
+        }
+      }
+    }
+  }
   &-head {
     flex: 0 0 40px;
     height: 40px;
@@ -47,11 +88,14 @@
       font-size: 14px;
       color: #15171f;
       line-height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       &-disabled {
         cursor: not-allowed;
         color: #d0d1d9;
       }
-      &&-active {
+      &-active {
         position: relative;
         &:after {
           content: '';
