--- a/src/Tabs/index.less
+++ b/src/Tabs/index.less
@@ -30,6 +30,9 @@
       &-item {
         width: 100%;
         margin: 0;
+        text-align: right;
+        justify-content: flex-end;
+        padding-right: 20px;
         &-active {
           &::after {
             bottom: 0;
