--- a/src/Operation/index.less
+++ b/src/Operation/index.less
@@ -4,6 +4,11 @@
   display: flex;
   align-items: center;
 
+  .@{prefix}-popconfirm-target {
+    margin-left: -12px;
+    padding: 0 12px;
+  }
+
   & > &-item {
     font-size: 12px;
     font-weight: 500;
