--- a/src/Collapse/index.less
+++ b/src/Collapse/index.less
@@ -6,7 +6,30 @@
   border-left: 1px solid #e9eaf2;
   border-right: 1px solid #e9eaf2;
 
+  &-noBorder {
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+
+    .@{prefix}-collapse-item {
+      border-top: 1px solid #e9eaf2;
+      .@{prefix}-collapse-item-head {
+        border: 0;
+      }
+      .@{prefix}-collapse-item-body {
+        border: 0;
+      }
+    }
+  }
+
   &-item {
+    &-title {
+      flex: 1;
+      font-size: 14px;
+      color: #151823;
+      line-height: 40px;
+    }
+
     &&-open {
       .@{prefix}-collapse-item-body {
       }
@@ -23,6 +46,7 @@
       font-size: 12px;
       color: #15171f;
       line-height: 18px;
+
       & > .iconfont {
         margin-right: 5px;
       }
@@ -34,6 +58,14 @@
       padding: 12px;
       overflow: hidden;
       border-bottom: 1px solid #e9eaf2;
+    }
+
+    &-extra {
+      display: flex;
+      align-items: center;
+      & > * {
+        margin-left: 10px;
+      }
     }
   }
 }
