--- a/src/Image/index.less
+++ b/src/Image/index.less
@@ -1,4 +1,28 @@
 @import '../index.less';
 
-.@{prefix}-t {
+.@{prefix}-image {
+  display: inline-block;
+  overflow: hidden;
+  position: relative;
+  &[hidden] {
+    display: none;
+  }
+  & > div,
+  & > img {
+    width: 100%;
+    height: 100%;
+  }
+  & > img {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+  }
+  .uni-image-will-change {
+    will-change: transform;
+  }
 }
